name:                Strafunski-Sdf2Haskell
version:             1.1.0.0
synopsis:            Converts SDF to Haskell
description:         Generates code for using SDF grammars in Haskell. See <http://www.syntax-definition.org/> for more information about SDF.
category:            Language
license:             BSD3
license-file:        LICENSE
-- For contributors & what they did, see AUTHORS
author:              Ralf Laemmel, Joost Visser
maintainer:          darmanithird@gmail.com

Cabal-Version: >= 1.8
build-type:   Simple
data-files:   AUTHORS, ChangeLog, README

source-repository head
  type:       git
  location:   https://github.com/jkoppel/Strafunski-Sdf2Haskell

--extra-source-files:

executable Sdf2Haskell

    Extensions:
      Rank2Types,
      TypeSynonymInstances,
      FlexibleInstances,
      FlexibleContexts,
      DeriveDataTypeable,
      ScopedTypeVariables,
      IncoherentInstances

    build-depends:  base <= 4.19,
                    Strafunski-ATermLib==1.7.0.0,
                    template-haskell,
                    pretty <= 1.2,
                    mtl <= 2.4,
                    Strafunski-StrategyLib == 5.1.0.0,
                    directory <= 1.4,
                    process <= 1.7,
                    haskell-src <= 1.1

    main-is:        Sdf2Haskell.hs
    hs-source-dirs: generator
    other-modules: Cfg,
                   GPP,
                   HaskellLib,
                   ImplodePT,
                   SGLR,
                   Sdf,
                   Sdf2Cfg,
                   Sdf2HaskellUtils,
                   Sdf2Pretty,
                   Sdf2Syntax,
                   SdfCoverage,
                   SdfEqInstances,
                   SdfLib,
                   --SdfMetrics,
                   SdfOrdInstances,
                   SdfPP,
                   SyntaxATermConvertibleInstances
    ghc-options:    -Wall

